overflow fix

--- a/app/assets/stylesheets/base/container.scss
+++ b/app/assets/stylesheets/base/container.scss
@@ -1,5 +1,6 @@
 #container {
 
   height: 100%;
+  overflow: auto;
 
 }
